--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,8 @@ paginate = 6
 builtBy = "Mike Koss"
 defaultImage = "gopher.jpg"
 
+custom_css = ["css/custom.css"]
+
 twitter = "https://twitter.com/mckoss"
 github = "https://github.com/mckoss"
 email = "mike@mckoss.com"
