--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "mckoss.com | Mike Koss"
 theme = "hugo-cards"
 paginate = 6
+publishDir = "docs"
 
 [params]
 builtBy = "Mike Koss"
