Fix panel image heights and add instagram.

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ defaultImage = "mike-closeup.jpg"
 custom_css = ["css/custom.css"]
 
 twitter = "https://twitter.com/mckoss"
+instagram = "https://instagram.com/mckoss"
 github = "https://github.com/mckoss"
 email = "mike@mckoss.com"
 
