--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ twitter = "https://twitter.com/mckoss"
 instagram = "https://instagram.com/mckoss"
 github = "https://github.com/mckoss"
 email = "mike@mckoss.com"
+disqus = "mckoss"
 
 analytics = "UA-177353-1"
 
